fix conflicting display conditions in info container, added custom scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,23 @@ h2, h3, h4, h5, h6 {
 #root {
     height: 100% !important;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgb(255, 225, 172);
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(229,120,61);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(187, 98, 50);
+  }
